--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace "xyz.justsoft.video_thumbnail"
     compileSdkVersion 34
 
     defaultConfig {
